Fix navbar jump glitch

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,9 @@ nav {
 	text-align:center;
 	overflow: hidden;
 	background-color: lightgray;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 nav ul {
@@ -88,6 +91,7 @@ nav a:link, nav a:visited {
 	text-align: center;
 	padding-top: 75px;
     padding-bottom: 90px;
+	margin-top: 20px;
     margin-bottom: 50px;
 }
 
